infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviqora-api-service
  namespace: aviqora
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: aviqora-api
---
apiVersion: v1
kind: Service
metadata:
  name: aviqora-web-service
  namespace: aviqora
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: aviqora-web
